All 5V tolerant inputs now, updated code to cope. Compiles fine with -O2, updated description of required hardware.

--- a/MidiKeyboardBluePill.ioc
+++ b/MidiKeyboardBluePill.ioc
@@ -4,7 +4,7 @@ KeepUserPlacement=false
 Mcu.Family=STM32F1
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
-Mcu.IP2=SPI1
+Mcu.IP2=SPI2
 Mcu.IP3=SYS
 Mcu.IP4=USART2
 Mcu.IPNb=5
@@ -12,8 +12,8 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=PB3
-Mcu.Pin11=PB5
+Mcu.Pin10=PA14
+Mcu.Pin11=PB4
 Mcu.Pin12=PB6
 Mcu.Pin13=PB7
 Mcu.Pin14=PB8
@@ -25,26 +25,26 @@ Mcu.Pin4=PB10
 Mcu.Pin5=PB11
 Mcu.Pin6=PB12
 Mcu.Pin7=PB13
-Mcu.Pin8=PA13
-Mcu.Pin9=PA14
+Mcu.Pin8=PB15
+Mcu.Pin9=PA13
 Mcu.PinsNb=17
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
 MxCube.Version=5.2.0
 MxDb.Version=DB.5.0.20
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.BusFault_IRQn=true\:2\:0\:true\:false\:true\:true\:false
+NVIC.DebugMonitor_IRQn=true\:2\:0\:true\:false\:true\:true\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.MemoryManagement_IRQn=true\:2\:0\:true\:false\:true\:true\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.PendSV_IRQn=true\:2\:0\:true\:false\:true\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.SPI2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.SVCall_IRQn=true\:2\:0\:true\:false\:true\:true\:false
+NVIC.SysTick_IRQn=true\:2\:0\:true\:false\:true\:true\:true
 NVIC.USART2_IRQn=true\:1\:0\:true\:false\:true\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.UsageFault_IRQn=true\:2\:0\:true\:false\:true\:true\:false
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
@@ -53,71 +53,63 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PB10.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
-PB10.GPIO_Label=PB4
-PB10.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PB10.GPIO_PuPd=GPIO_PULLUP
-PB10.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB10.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PB10.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB10.GPIO_PuPd=GPIO_NOPULL
+PB10.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PB10.Locked=true
 PB10.PinState=GPIO_PIN_SET
 PB10.Signal=GPIO_Output
-PB11.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
-PB11.GPIO_Label=PB5
-PB11.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PB11.GPIO_PuPd=GPIO_PULLUP
-PB11.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB11.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PB11.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB11.GPIO_PuPd=GPIO_NOPULL
+PB11.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PB11.Locked=true
 PB11.PinState=GPIO_PIN_SET
 PB11.Signal=GPIO_Output
-PB12.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
-PB12.GPIO_Label=PB6
-PB12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PB12.GPIO_PuPd=GPIO_PULLUP
-PB12.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB12.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PB12.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB12.GPIO_PuPd=GPIO_NOPULL
+PB12.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PB12.Locked=true
 PB12.PinState=GPIO_PIN_SET
 PB12.Signal=GPIO_Output
-PB13.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
-PB13.GPIO_Label=PB7
-PB13.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PB13.GPIO_PuPd=GPIO_PULLUP
-PB13.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PB13.Locked=true
-PB13.PinState=GPIO_PIN_SET
-PB13.Signal=GPIO_Output
-PB3.Mode=RX_Only_Simplex_Unidirect_Slave
-PB3.Signal=SPI1_SCK
-PB5.Mode=RX_Only_Simplex_Unidirect_Slave
-PB5.Signal=SPI1_MOSI
-PB6.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
-PB6.GPIO_Label=PB0
-PB6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PB6.GPIO_PuPd=GPIO_PULLUP
-PB6.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB13.Mode=RX_Only_Simplex_Unidirect_Slave
+PB13.Signal=SPI2_SCK
+PB15.Mode=RX_Only_Simplex_Unidirect_Slave
+PB15.Signal=SPI2_MOSI
+PB4.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PB4.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB4.GPIO_PuPd=GPIO_NOPULL
+PB4.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
+PB4.Locked=true
+PB4.PinState=GPIO_PIN_SET
+PB4.Signal=GPIO_Output
+PB6.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PB6.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB6.GPIO_PuPd=GPIO_NOPULL
+PB6.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PB6.Locked=true
 PB6.PinState=GPIO_PIN_SET
 PB6.Signal=GPIO_Output
-PB7.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
-PB7.GPIO_Label=PB1
-PB7.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PB7.GPIO_PuPd=GPIO_PULLUP
-PB7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB7.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PB7.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB7.GPIO_PuPd=GPIO_NOPULL
+PB7.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PB7.Locked=true
 PB7.PinState=GPIO_PIN_SET
 PB7.Signal=GPIO_Output
-PB8.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
-PB8.GPIO_Label=PB2
-PB8.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PB8.GPIO_PuPd=GPIO_PULLUP
-PB8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB8.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PB8.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB8.GPIO_PuPd=GPIO_NOPULL
+PB8.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PB8.Locked=true
 PB8.PinState=GPIO_PIN_SET
 PB8.Signal=GPIO_Output
-PB9.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
-PB9.GPIO_Label=PB3
-PB9.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
-PB9.GPIO_PuPd=GPIO_PULLUP
-PB9.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB9.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
+PB9.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB9.GPIO_PuPd=GPIO_NOPULL
+PB9.GPIO_Speed=GPIO_SPEED_FREQ_MEDIUM
 PB9.Locked=true
 PB9.PinState=GPIO_PIN_SET
 PB9.Signal=GPIO_Output
@@ -160,7 +152,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true
 RCC.ADCFreqValue=36000000
 RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -187,14 +179,13 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
-SPI1.CLKPhase=SPI_PHASE_2EDGE
-SPI1.CLKPolarity=SPI_POLARITY_HIGH
-SPI1.CalculateBaudRate=18.0 MBits/s
-SPI1.Direction=SPI_DIRECTION_2LINES_RXONLY
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPolarity,CLKPhase
-SPI1.Mode=SPI_MODE_SLAVE
-SPI1.VirtualType=VM_SLAVE
+SPI2.CLKPhase=SPI_PHASE_2EDGE
+SPI2.CLKPolarity=SPI_POLARITY_HIGH
+SPI2.CalculateBaudRate=18.0 MBits/s
+SPI2.Direction=SPI_DIRECTION_2LINES_RXONLY
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,CLKPolarity,CLKPhase
+SPI2.Mode=SPI_MODE_SLAVE
+SPI2.VirtualType=VM_SLAVE
 USART2.BaudRate=31250
 USART2.IPParameters=VirtualMode,BaudRate,Mode
 USART2.Mode=MODE_RX
