--- a/MidiKeyboardBluePill.ioc
+++ b/MidiKeyboardBluePill.ioc
@@ -12,22 +12,24 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=PA14
-Mcu.Pin11=PB4
-Mcu.Pin12=PB6
-Mcu.Pin13=PB7
-Mcu.Pin14=PB8
-Mcu.Pin15=PB9
-Mcu.Pin16=VP_SYS_VS_Systick
+Mcu.Pin10=PB15
+Mcu.Pin11=PA13
+Mcu.Pin12=PA14
+Mcu.Pin13=PB4
+Mcu.Pin14=PB6
+Mcu.Pin15=PB7
+Mcu.Pin16=PB8
+Mcu.Pin17=PB9
+Mcu.Pin18=VP_SYS_VS_Systick
 Mcu.Pin2=PA2
 Mcu.Pin3=PA3
-Mcu.Pin4=PB10
-Mcu.Pin5=PB11
-Mcu.Pin6=PB12
-Mcu.Pin7=PB13
-Mcu.Pin8=PB15
-Mcu.Pin9=PA13
-Mcu.PinsNb=17
+Mcu.Pin4=PA4
+Mcu.Pin5=PA5
+Mcu.Pin6=PB10
+Mcu.Pin7=PB11
+Mcu.Pin8=PB12
+Mcu.Pin9=PB13
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -35,6 +37,7 @@ MxCube.Version=5.2.0
 MxDb.Version=DB.5.0.20
 NVIC.BusFault_IRQn=true\:2\:0\:true\:false\:true\:true\:false
 NVIC.DebugMonitor_IRQn=true\:2\:0\:true\:false\:true\:true\:false
+NVIC.EXTI9_5_IRQn=true\:2\:0\:true\:false\:true\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.MemoryManagement_IRQn=true\:2\:0\:true\:false\:true\:true\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false
@@ -53,6 +56,16 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=program-led
+PA4.Locked=true
+PA4.Signal=GPIO_Output
+PA5.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PA5.GPIO_Label=button
+PA5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
+PA5.GPIO_PuPd=GPIO_PULLUP
+PA5.Locked=true
+PA5.Signal=GPXTI5
 PB10.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
 PB10.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PB10.GPIO_PuPd=GPIO_NOPULL
@@ -179,6 +192,8 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
+SH.GPXTI5.0=GPIO_EXTI5
+SH.GPXTI5.ConfNb=1
 SPI2.CLKPhase=SPI_PHASE_2EDGE
 SPI2.CLKPolarity=SPI_POLARITY_HIGH
 SPI2.CalculateBaudRate=18.0 MBits/s
