--- a/MidiKeyboardBluePill.ioc
+++ b/MidiKeyboardBluePill.ioc
@@ -56,9 +56,10 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA4.GPIOParameters=GPIO_Label
+PA4.GPIOParameters=PinState,GPIO_Label
 PA4.GPIO_Label=program-led
 PA4.Locked=true
+PA4.PinState=GPIO_PIN_SET
 PA4.Signal=GPIO_Output
 PA5.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA5.GPIO_Label=button
