--- a/MidiKeyboardBluePill.ioc
+++ b/MidiKeyboardBluePill.ioc
@@ -37,7 +37,6 @@ MxCube.Version=5.2.0
 MxDb.Version=DB.5.0.20
 NVIC.BusFault_IRQn=true\:2\:0\:true\:false\:true\:true\:false
 NVIC.DebugMonitor_IRQn=true\:2\:0\:true\:false\:true\:true\:false
-NVIC.EXTI9_5_IRQn=true\:2\:0\:true\:false\:true\:true\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.MemoryManagement_IRQn=true\:2\:0\:true\:false\:true\:true\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false
@@ -61,12 +60,11 @@ PA4.GPIO_Label=program-led
 PA4.Locked=true
 PA4.PinState=GPIO_PIN_SET
 PA4.Signal=GPIO_Output
-PA5.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
+PA5.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA5.GPIO_Label=button
-PA5.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PA5.GPIO_PuPd=GPIO_PULLUP
 PA5.Locked=true
-PA5.Signal=GPXTI5
+PA5.Signal=GPIO_Input
 PB10.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_ModeDefaultOutputPP
 PB10.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PB10.GPIO_PuPd=GPIO_NOPULL
@@ -193,8 +191,6 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
-SH.GPXTI5.0=GPIO_EXTI5
-SH.GPXTI5.ConfNb=1
 SPI2.CLKPhase=SPI_PHASE_2EDGE
 SPI2.CLKPolarity=SPI_POLARITY_HIGH
 SPI2.CalculateBaudRate=18.0 MBits/s
