Reset clocks in .ioc file.

--- a/MidiKeyboardBluePill.ioc
+++ b/MidiKeyboardBluePill.ioc
@@ -164,33 +164,32 @@ ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true
-RCC.ADCFreqValue=18000000
-RCC.AHBFreq_Value=36000000
+RCC.ADCFreqValue=36000000
+RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
-RCC.APB1Freq_Value=18000000
-RCC.APB1TimFreq_Value=36000000
-RCC.APB2Freq_Value=36000000
-RCC.APB2TimFreq_Value=36000000
+RCC.APB1Freq_Value=36000000
+RCC.APB1TimFreq_Value=72000000
+RCC.APB2Freq_Value=72000000
+RCC.APB2TimFreq_Value=72000000
 RCC.DATA_CACHE_ENABLE=1
-RCC.FCLKCortexFreq_Value=36000000
+RCC.FCLKCortexFreq_Value=72000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=36000000
-RCC.HSEDivPLL=RCC_HSE_PREDIV_DIV2
+RCC.HCLKFreq_Value=72000000
 RCC.INSTRUCTION_CACHE_ENABLE=1
-RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,DATA_CACHE_ENABLE,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSEDivPLL,INSTRUCTION_CACHE_ENABLE,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,PWREXT_OverDrive,PWR_Regulator_Voltage_Scale,RCC_TIM_PRescaler_Selection,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
-RCC.MCOFreq_Value=36000000
-RCC.PLLCLKFreq_Value=36000000
-RCC.PLLMCOFreq_Value=18000000
+RCC.IPParameters=ADCFreqValue,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,DATA_CACHE_ENABLE,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,INSTRUCTION_CACHE_ENABLE,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,PWREXT_OverDrive,PWR_Regulator_Voltage_Scale,RCC_TIM_PRescaler_Selection,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VCOOutput2Freq_Value
+RCC.MCOFreq_Value=72000000
+RCC.PLLCLKFreq_Value=72000000
+RCC.PLLMCOFreq_Value=36000000
 RCC.PLLMUL=RCC_PLL_MUL9
 RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.PWREXT_OverDrive=PWREXT_OverDrive_DESACTIVATED
 RCC.PWR_Regulator_Voltage_Scale=PWR_REGULATOR_VOLTAGE_SCALE3
 RCC.RCC_TIM_PRescaler_Selection=RCC_TIMPRES_DESACTIVATED
-RCC.SYSCLKFreq_VALUE=36000000
+RCC.SYSCLKFreq_VALUE=72000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.TimSysFreq_Value=36000000
-RCC.USBFreq_Value=36000000
-RCC.VCOOutput2Freq_Value=4000000
+RCC.TimSysFreq_Value=72000000
+RCC.USBFreq_Value=72000000
+RCC.VCOOutput2Freq_Value=8000000
 SPI2.CLKPhase=SPI_PHASE_2EDGE
 SPI2.CLKPolarity=SPI_POLARITY_HIGH
 SPI2.Direction=SPI_DIRECTION_2LINES_RXONLY
